--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "glob": "^7.1.4",
     "mkdirp": "^0.5.1",
     "parcel-bundler": "^1.12.3",
+    "parcel-plugin-wrapper": "^0.2.2",
     "rimraf": "^2.6.3",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.3"
