--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "author": "Pablo Molina <contact@pablomolina.me>",
   "dependencies": {
+    "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
   },
@@ -16,6 +17,9 @@
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
+    "@types/prop-types": "^15.7.1",
+    "@types/react": "^16.9.1",
+    "@types/react-dom": "^16.8.5",
     "babel-loader": "^8.0.6",
     "glob": "^7.1.4",
     "html-webpack-inline-source-plugin": "0.0.10",
