--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "main": "build.ts",
   "scripts": {
-    "build": "node build.js"
+    "build": "NODE_ENV=production node build.js"
   },
   "author": "Pablo Molina <contact@pablomolina.me>",
   "dependencies": {
