--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -11,7 +11,11 @@ jobs:
     - uses: actions/checkout@v1
     - name: Use Node.js ${{ matrix.node_version }}
       uses: actions/setup-node@v1
+      with:
+        node_version: ${{ matrix.node_version }}
     - name: npm run ${{ matrix.npm_script }}
       run: npm install && npm run ${{ matrix.npm_script }}
+      with:
+        npm_script: ${{ matrix.npm_script }}
       env:
         CI: true
