--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       matrix:
         node_version: [10.x, 12.x]
-        npm_scripts: [build, test]
+        npm_script: [build, test]
 
     steps:
       - uses: actions/checkout@v1
